<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mogger</string>
    <string name="hello_world">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Loginimg"> </string>
    <string name="username">Username</string>
    <string name="Submit">Submit</string>
    <string name="Password">Password</string>
    <string name="FirstLast">First And Last Name</string>
    <string name="email">E-Mail</string>
    <string name="year">Birth Year</string>
    <string name="nothing"> </string>
    <string name="Textview">TextView</string>
    <string name="edit">Edit</string>
    <string name="upload">Upload Profile Pic</string>
    <string name="Friends">Friends</string>
    <string name="wgn">What\'s going on?</string>
    <string name="post">Post</string>
    <string name="bio">Bio:</string>

</resources>