<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Login"
        android:layout_alignBottom="@+id/Login"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:text="@string/Register" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="178dp"
        android:layout_toLeftOf="@+id/Register"
        android:text="@string/Login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Login"
        android:layout_alignParentTop="true"
        android:src="@drawable/brown" android:contentDescription="@string/nothing"/>

</RelativeLayout>