<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <QuickContactBadge
                        android:id="@+id/quickContactBadge1"
                        android:layout_width="121dp"
                        android:layout_height="120dp"
                        android:src="@drawable/moggerprofilepic" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/bio"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="0.33"
                        android:text="@string/Textview" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="284dp"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/upload" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Textview" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/Friends" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:hint="@string/wgn"
                        android:inputType="textMultiLine" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <WebView
                android:id="@+id/webView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@android:layout/activity_list_item" />
        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@android:layout/activity_list_item" />

        <include
            android:layout_width="0dip"
            android:layout_height="116dp"
            android:layout_weight="1"
            layout="@android:layout/activity_list_item" />
</LinearLayout>